--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,7 +12,7 @@
     </header>
 
     <section id="search">
-        <input type="text" id="searchInput" placeholder="Поиск по названию или описанию...">
+        <input type="text" id="searchInput" placeholder="Поиск по названию...">
         <button id="searchBtn">Искать</button>
     </section>
 
@@ -22,20 +22,28 @@
     <div id="modal" class="hidden">
         <div class="modal-content">
             <h2>Новый рецепт</h2>
-            <label>Название</label>
-            <input id="titleInput">
+            <label>Название <span class="required">*</span></label>
+            <input id="titleInput" required>
 
             <label>Описание</label>
-            <textarea id="descInput"></textarea>
+            <textarea id="descInput" rows="3"></textarea>
 
-            <label>Ингредиенты (через запятую)</label>
-            <input id="ingredientsInput">
+            <label>Ингредиенты</label>
+            <div id="ingredientsList">
+                <div class="ingredient-row">
+                    <input type="text" placeholder="Название" class="ing-name">
+                    <input type="number" placeholder="Количество" class="ing-amount" step="0.1">
+                    <input type="text" placeholder="Единица (г, мл, шт...)" class="ing-unit">
+                    <button type="button" class="remove-ingredient" onclick="this.parentElement.remove()">×</button>
+                </div>
+            </div>
+            <button type="button" class="add-ingredient-btn" onclick="addIngredientRow()">+ Добавить ингредиент</button>
 
             <label>Шаги приготовления</label>
-            <textarea id="stepsInput"></textarea>
+            <textarea id="stepsInput" rows="4" placeholder="Опишите шаги приготовления..."></textarea>
 
             <label>Теги (через запятую)</label>
-            <input id="tagsInput">
+            <input id="tagsInput" placeholder="завтрак, быстро, легко">
 
             <div class="actions">
                 <button id="saveBtn">Сохранить</button>
