--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,10 @@
 <body>
     <header>
         <h1>🥣 Мои рецепты</h1>
-        <button id="addBtn">+ Добавить рецепт</button>
+        <div style="display: flex; gap: 10px;">
+            <a href="find.html" style="background: #2196F3; color: white; text-decoration: none; padding: 6px 12px; border-radius: 8px; display: inline-block;">🔍 Подбор по ингредиентам</a>
+            <button id="addBtn">+ Добавить рецепт</button>
+        </div>
     </header>
 
     <section id="search">
