--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,7 +9,8 @@
     <header>
         <h1>🥣 Мои рецепты</h1>
         <div style="display: flex; gap: 10px;">
-            <a href="find.html" style="background: #2196F3; color: white; text-decoration: none; padding: 6px 12px; border-radius: 8px; display: inline-block;">🔍 Подбор по ингредиентам</a>
+            <button id="randomBtn" style="background: #9BBFA9;">🎲 Что приготовить сегодня?</button>
+            <a href="find.html" style="background: #7FA892; color: #FDFDFD; text-decoration: none; padding: 6px 12px; border-radius: 8px; display: inline-block;">🔍 Подбор по ингредиентам</a>
             <button id="addBtn">+ Добавить рецепт</button>
         </div>
     </header>
