--- a/frontend/find.html
+++ b/frontend/find.html
@@ -13,7 +13,7 @@
         .back-link {
             display: inline-block;
             margin-bottom: 20px;
-            color: #4CAF50;
+            color: #6D9580;
             text-decoration: none;
             font-weight: 500;
         }
@@ -38,10 +38,11 @@
             padding: 10px 20px;
         }
         .ingredients-section {
-            background: white;
+            background: #FEFEFE;
             padding: 20px;
             border-radius: 12px;
-            box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+            border: 1px solid #D1D7D0;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.06);
             margin-bottom: 24px;
         }
         .ingredients-grid {
@@ -51,7 +52,7 @@
             max-height: 400px;
             overflow-y: auto;
             padding: 12px;
-            border: 1px solid #eee;
+            border: 1px solid #D1D7D0;
             border-radius: 8px;
             margin-top: 12px;
         }
@@ -64,7 +65,7 @@
             transition: background 0.2s;
         }
         .ingredient-checkbox:hover {
-            background: #f5f5f5;
+            background: #E8ECE7;
         }
         .ingredient-checkbox input[type="checkbox"] {
             width: 18px;
@@ -88,11 +89,11 @@
         .no-results {
             text-align: center;
             padding: 40px;
-            color: #666;
+            color: #3E3E40;
         }
         .search-info {
             margin-bottom: 12px;
-            color: #666;
+            color: #6B746F;
             font-size: 14px;
         }
     </style>
@@ -112,12 +113,12 @@
         <div class="controls">
             <button id="selectAllBtn">Выбрать все</button>
             <button id="deselectAllBtn">Снять все</button>
-            <button id="findBtn" style="background: #2196F3;">Найти рецепты</button>
+            <button id="findBtn">Найти рецепты</button>
         </div>
 
         <div class="ingredients-section">
             <div class="search-info">
-                <input type="text" id="ingredientSearch" placeholder="Поиск ингредиента..." style="width: 100%; padding: 10px; border: 1px solid #ddd; border-radius: 8px; box-sizing: border-box;">
+                <input type="text" id="ingredientSearch" placeholder="Поиск ингредиента..." style="width: 100%; padding: 10px; border: 1px solid #D1D7D0; border-radius: 8px; box-sizing: border-box; background: #FFFFFF; color: #3E3E40;">
             </div>
             <div id="ingredientsList" class="ingredients-grid">
                 <p>Загрузка ингредиентов...</p>
