--- a/frontend/find.html
+++ b/frontend/find.html
@@ -91,6 +91,12 @@
             padding: 40px;
             color: #3E3E40;
         }
+        .no-results-container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 200px;
+        }
         .search-info {
             margin-bottom: 12px;
             color: #6B746F;
